# Changelog

## Version 5.12.1

* Fixing #654 Failed to import attachment due to bad mime type gathering (thanks to larsk2)
* Fixing #659 current profile panel won't open (thanks to danielly2020)
* Fixing missing unittests for common encoder options
* Fixing some extra spaces in commands
* Fixing logs were showing red for info commands
* Fixing missing translations (thanks to danielly2020)

## Version 5.12.0

* Adding automatic downloads for rigaya encoders on Windows
* Adding #45 audio normalization (thanks to HannesJo0139, Marco Ravich, Kirill, Werner Robitza, Type-Delta, Xoanon88)
* Adding ability to add subtitle or audio track
* Fixing custom_crf not being found (thanks to Norbert)
* Fixing missing space to CRF (thanks to Noelle)

## Version 5.11.0

* Adding parallel encoding options for rigaya hardware encoders (thanks to Hexenhammer)
* Adding builds for Ubuntu 22.04 and mac 13 again
* Changing SVT-AV1 to single pass only due to ffmpeg not allowing passlog files properly
* Changing SVT-AV1 to CRF quantization mode by default
* Fixing #642 Possible to create a profile without bitrate specified for audio stream (thanks to Xoanon88)
* Fixing #644 various typos (thanks to luzpaz)
* Fixing #646 PydanticSerializationUnexpectedValue warning during startup (thanks to Noelle Leigh)
* Fixing #647 another typo (thanks to Noelle Leigh)
* Fixing #649 1-Pass Bitrate stored in x265 profile not honored (thanks to Xoanon88)
* Fixing how program is centered on multiple monitors
* Fixing do not pass infer_no_subs to encc encoders

## Version 5.10.0

* Adding global disable interlace check (thanks to Hexenhammer)
* Changing profile bitrate selector to be text field (thanks to Hexenhammer)
* Fixing #637 saving temp files for seven days to allow for better debug and recovery (thanks to marillat)
* Fixing #638 switching archived library appdirs to maintained platformdirs (thanks to marillat)
* Fixing x265 passlog file name was not being applied properly