@@ -11,6 +11,7 @@ from functools import lru_cache
 from pathlib import Path
 import importlib.resources
 
+from iso639 import Lang
 from platformdirs import user_data_dir
 from box import Box
 
@@ -19,7 +20,7 @@ with importlib.resources.as_file(ref) as lf:
     language_file = str(lf.resolve())
 
 
-__all__ = ["t", "translate"]
+__all__ = ["t", "translate", "Language"]
 
 config = os.getenv("FF_CONFIG")
 if config:
@@ -58,3 +59,18 @@ def translate(text):
 
 
 t = translate
+
+
+class Language(Lang):
+    _data = Lang._data.copy()
+    _data["name"]["Undefined"] = {
+        "pt1": "un",
+        "pt2b": "und",
+        "pt2t": "und",
+        "pt3": "und",
+        "pt5": "",
+        "name": "Undefined",
+    }
+    _data["pt2b"]["und"] = {"name": "Undefined", "pt1": "un", "pt2t": "und", "pt3": "und", "pt5": ""}
+    _data["pt3"]["und"] = {"name": "Undefined", "pt2b": "und", "pt1": "un", "pt2t": "und", "pt5": ""}
+    _data["pt1"]["un"] = {"name": "Undefined", "pt2b": "und", "pt2t": "und", "pt3": "und", "pt5": ""}
